Crud Books before pundit setting in BooksController

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,18 @@
 <h1>Books#show</h1>
 <p>Find me in app/views/books/show.html.erb</p>
+
+<h2><%= @book.title %></h2>
+<p><%= @book.description %></p>
+<p><%= @book.author %></p>
+<p><%= @book.collection %></p>
+<p><%= @book.editor %></p>
+<p><%= @book.isbn %></p>
+<p><%= @book.state %></p>
+
+<ul>
+<li><%= link_to "Delete #{@book.title}",
+                  book_path(@book),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %> </li>
+        <li><%= link_to 'Back to all books', books_path %> </li>
+</ul>
