--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
+<ul>
+  <% @books_wish.each do |book| %>
+    <li><h4><%= link_to book.title, book_path(book) %></h4></li>
+  <% end %>
+</ul>
+
+<%= link_to("deposit a book", books_new_path) %>
+<%= link_to("wish a book", books_new_path) %>
