--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,11 +8,14 @@
 <p><%= @book.editor %></p>
 <p><%= @book.isbn %></p>
 <p><%= @book.state %></p>
+<p><%= @book.wish %></p>
 
 <ul>
-<li><%= link_to "Delete #{@book.title}",
-                  book_path(@book),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %> </li>
-        <li><%= link_to 'Back to all books', books_path %> </li>
+  <li><%= link_to "Delete #{@book.title}",
+                    book_path(@book),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" } %> </li>
+  <li><%= link_to 'Back to all books', books_path %> </li>
+  <li><%= link_to "update #{@book.title}", edit_book_path(@book) %> </li>
+
 </ul>
