--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,28 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
-<ul>
-  <% @books.each do |book| %>
-    <li>
-      <h4><%= link_to book.title, book_path(book) %></h4>
-      <%= image_tag "#{book.image}" %>
-    </li>
+
+<div class="container">
+  <ul>
+    <% @books.each do |book| %>
+      <li class="list-inline">
+        <div class="card rounded-lg" style="width: 15rem;">
+          <div class="m-1"><%= image_tag("#{book.image}", class: "card-img-top rounded-lg",alt: "Card image cap") %></div>
+          <div class="card-body">
+            <h5 class="card-title overflow-hidden"style="height: 4rem;"><%= book.title %></h5>
+            <p class="card-text overflow-hidden"style="height: 4rem;"><%= book.description %></p>
+            <div class= "d-flex">
+              <a href="#" class="btn btn-primary rounded-lg flex-grow-1">
+               go to the book
+              </a>
+            </div>
+          </div>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+  <% if policy(Book).create? %>
+    <%= link_to("deposit a book", books_new_path) %>
+    <%= link_to("wish a book", books_new_path) %>
   <% end %>
-</ul>
-<% if policy(Book).create? %>
-  <%= link_to("deposit a book", books_new_path) %>
-  <%= link_to("wish a book", books_new_path) %>
-<% end %>
+</div>
+
